--- a/src/pages/result.html
+++ b/src/pages/result.html
@@ -1,63 +1,73 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>単語リスト</title>
-</head>
-<body>
-    <div src="https://laoshubaby.oss-cn-beijing.aliyuncs.com/static/nihongo/nhgbkysms.lock" width="1px" height="1px" />
-    <input type="number" id="rowCount" placeholder="Enter number of rows" min="1">
-    <button id="startButton">START</button>
-
-    <table id="tangoTable" border="1">
-        <thead>
-            <tr>
-                <th>Japanese</th>
-                <th>Reading</th>
-                <th>Class</th>
-                <th>Translation</th>
-                <th>Usage</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-
-    <script>
-        document.getElementById('startButton').addEventListener('click', () => {
-            const rowCount = document.getElementById('rowCount').value;
-            if (rowCount && rowCount > 0) {
-                // 访问URL并获取数据
-                fetch(`{{{endpoint}}}tango/minnanonihongo/${rowCount}`)
-                    .then(response => response.json())
-                    .then(data => {
-                        // 获取表格的tbody元素
-                        const tbody = document.querySelector('#tangoTable tbody');
-                        // 清空之前的内容
-                        tbody.innerHTML = '';
-
-                        // 遍历数据并生成表格行
-                        data.tango_list.forEach(item => {
-                            const tr = document.createElement('tr');
-
-                            // 创建每一列并添加到行中
-                            for (const key in item) {
-                                const td = document.createElement('td');
-                                td.textContent = item[key];
-                                tr.appendChild(td);
-                            }
-
-                            // 将行添加到tbody中
-                            tbody.appendChild(tr);
-                        });
-                    })
-                    .catch(error => {
-                        console.error('Error fetching data:', error);
-                    });
-            } else {
-                alert('Please enter a valid number of rows.');
-            }
-        });
-    </script>
-</body>
-</html>
+  <!DOCTYPE html>
+  <html lang="ja">
+  <head>
+      <meta charset="UTF-8">
+      <title>単語リスト</title>
+      <style>
+          .input-container {
+              font-weight: bold;
+              border: 1px solid black;
+              padding: 10px;
+              margin-bottom: 10px;
+          }
+      </style>
+  </head>
+  <body>
+      <div class="input-container">
+          <label for="dictbook">Dict Book:</label>
+          <input type="text" id="dictbook" placeholder="Enter dict book" value="minnanonihongo">
+          <br>
+          <label for="collection">Collection:</label>
+          <input type="text" id="collection" placeholder="Enter collection" value="tango.1.csv">
+          <br>
+          <label for="num">Number of Rows:</label>
+          <input type="number" id="num" placeholder="Enter number of rows" min="1" value="10">
+          <br>
+          <button id="startButton">START</button>
+      </div>
+  
+      <table id="tangoTable" border="1">
+          <thead>
+              <tr>
+                  <th>Japanese</th>
+                  <th>Reading</th>
+                  <th>Class</th>
+                  <th>Translation</th>
+                  <th>Usage</th>
+              </tr>
+          </thead>
+          <tbody>
+          </tbody>
+      </table>
+  
+      <script>
+          document.getElementById('startButton').addEventListener('click', () => {
+              const dictbook = document.getElementById('dictbook').value;
+              const collection = document.getElementById('collection').value;
+              const num = document.getElementById('num').value;
+              if (num && num > 0) {
+                  fetch(`{{{endpoint}}}tango/minnanonihongo/${num}`)
+                      .then(response => response.json())
+                      .then(data => {
+                          const tbody = document.querySelector('#tangoTable tbody');
+                          tbody.innerHTML = '';
+                          data.tango_list.forEach(item => {
+                              const tr = document.createElement('tr');
+                              for (const key in item) {
+                                  const td = document.createElement('td');
+                                  td.textContent = item[key];
+                                  tr.appendChild(td);
+                              }
+                              tbody.appendChild(tr);
+                          });
+                      })
+                      .catch(error => {
+                          console.error('Error fetching data:', error);
+                      });
+              } else {
+                  alert('Please enter a valid number of rows.');
+              }
+          });
+      </script>
+  </body>
+  </html>
