fix: refine controller func name

--- a/src/pages/result.html
+++ b/src/pages/result.html
@@ -18,7 +18,7 @@
           <input type="text" id="dictbook" placeholder="Enter dict book" value="minnanonihongo">
           <br>
           <label for="collection">Collection:</label>
-          <input type="text" id="collection" placeholder="Enter collection" value="tango.1.csv">
+          <input type="text" id="collection" placeholder="Enter collection" value="tango.1">
           <br>
           <label for="num">Number of Rows:</label>
           <input type="number" id="num" placeholder="Enter number of rows" min="1" value="10">
