feat: add trigged info log for every controller and change base file

--- a/src/pages/result.html
+++ b/src/pages/result.html
@@ -5,7 +5,7 @@
     <title>単語リスト</title>
 </head>
 <body>
-    <div src="https://laoshubaby.oss-cn-beijing.aliyuncs.com/static/nihongo/nhgbkysms.lock" width="1px" height="1px" />
+    <div src="https://laoshubaby.oss-cn-beijing.aliyuncs.com/static/nihongo/nhgbkysms.metadata.json" width="1px" height="1px" />
     <input type="number" id="rowCount" placeholder="Enter number of rows" min="1">
     <button id="startButton">START</button>
 
